--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ flutter:
     - assets/logo.png
     - assets/page1.png
     - assets/fondo.png
+    - assets/login.png
+    - assets/google.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
