--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
     - assets/fondo.png
     - assets/login.png
     - assets/google.png
+    - assets/signup.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
