--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.3.8
+  convex_bottom_bar: ^3.2.0
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +64,8 @@ flutter:
     - assets/login.png
     - assets/google.png
     - assets/signup.png
+    - assets/graph_1 1.png
+    - assets/Home.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
