--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.3.8
   convex_bottom_bar: ^3.2.0
+  flutter_floating_bottom_bar: ^1.2.0
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +68,11 @@ flutter:
     - assets/signup.png
     - assets/graph_1 1.png
     - assets/Home.png
+    - assets/sports.jpg
+    - assets/games.jpg
+    - assets/aot.png
+    - assets/bgProfile.jpg
+    - assets/perfil.jpeg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
