--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,8 @@ flutter:
     - assets/aot.png
     - assets/bgProfile.jpg
     - assets/perfil.jpeg
+    - assets/Chat.png
+    - assets/interesesbg.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
