--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   convex_bottom_bar: ^3.2.0
   flutter_floating_bottom_bar: ^1.2.0
   badges: ^3.1.2
+  loggy: ^2.0.3
 
 dev_dependencies:
   flutter_test:
