--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   flutter_floating_bottom_bar: ^1.2.0
   badges: ^3.1.2
   loggy: ^2.0.3
+  google_sign_in: ^6.1.6
+  connectivity_plus: ^4.0.2
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
