--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -48,7 +48,7 @@ android {
         applicationId "com.un_mobile.talk_around"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -73,7 +73,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
 }
 
-plugins {
-  id 'com.android.application'
-  id 'com.google.gms.google-services'
-}
+// plugins {
+//   id 'com.android.application'
+//   id 'com.google.gms.google-services'
+// }
+apply plugin: 'com.google.gms.google-services'
