--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.7.10'
+    ext.kotlin_version = '1.9.0'
     repositories {
         google()
         mavenCentral()
@@ -8,8 +8,18 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.4.0'
     }
 }
+
+// plugins {
+//     id 'com.google.gms.google-services' version '4.4.0' apply false
+// }
+// dependencies {
+//     classpath 'com.android.tools.build:gradle:7.3.0'
+//     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+//     classpath 'com.google.gms:google-services:4.4.0'
+//      }
 
 allprojects {
     repositories {
@@ -28,8 +38,4 @@ subprojects {
 
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
-}
-
-plugins {
-    id 'com.google.gms.google-services' version '4.4.0' apply false
 }
