--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,8 @@ flutter:
     - assets/img/perfil.jpeg
     - assets/img/Chat.png
     - assets/img/interesesbg.png
+    - assets/img/default_topic_1.jpg
+    - assets/img/default_channel_1.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
