--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   connectivity_plus: ^4.0.2
   http: ^1.1.0
   shared_preferences: ^2.2.1
+  geolocator: ^10.1.0
 
 dev_dependencies:
   flutter_test:
